# zkPass-tutorial-examples

./: README.md
contracts/: .gitignore  .prettierrc.json  README.md  hardhat.config.js  package.json
contracts/contracts/: Common.sol  ProofVerifier.sol  SampleAttestation.sol
contracts/scripts/: deploy.attestation.js  deploy.js
contracts/test/: ProofVerifier.js  SampleAttestation.js
front-end-JS-SDK/: package.json  tsconfig.json
front-end-JS-SDK/src/app/: constants.ts  globals.css  helper.ts  page.tsx  types.ts
front-end-JS-SDK/src/app/contract/: AttestationABI.json  page.tsx
front-end-JS-SDK/src/app/evm-contract/: AttestationABI.json  page.tsx
front-end-JS-SDK/src/app/lib/: registry.tsx
front-end-JS-SDK/src/app/sol-contract/: page.tsx
front-end-O1JS-SDK/: next.config.js  package.json
front-end-O1JS-SDK/src/app/: constants.ts  helper.ts  layout.tsx  page.module.css  page.tsx  types.ts
schemas/: binance-balance.json  discord-channel.json  discord-owner.json  okx-kyc.json  quora-account.json  x-account.json
solana-program/: .gitignore  Cargo.toml  README.md
solana-program/src/: error.rs  instructions.rs  lib.rs  processor.rs  state.rs  utils.rs
solana-program/tests/: functional.rs
