[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []

[dependencies]
num-traits = "0.2.18"
num-derive = "0.4.2"
hex = "0.4.3"
solana-program = "1.18.11"
borsh = "1.4.0"
borsh-derive = "1.4.0"
bs58 = "0.5.1"

[dev-dependencies]
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"
